content, main page, add desks

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="grey lighten-3">
+<body>
 <app-root></app-root>
 <!-- SCRIPTS -->
 <!-- JQuery -->
